--- a/app/src/main/res/layout/anime_card.xml
+++ b/app/src/main/res/layout/anime_card.xml
@@ -41,6 +41,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="#80111111"
                 android:fontFamily="sans-serif"
+                android:maxLength="25"
                 android:text="Title"
                 android:textAlignment="center"
                 android:textColor="@color/white"
