--- a/app/src/main/res/layout/continue_watching_card.xml
+++ b/app/src/main/res/layout/continue_watching_card.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/animeImage"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
