--- a/app/src/main/res/layout/activity_anime_player.xml
+++ b/app/src/main/res/layout/activity_anime_player.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".AnimePlayer">
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:controller_layout_id="@layout/custom_player_controls"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:controller_layout_id="@layout/custom_player_controls"
-        app:player_layout_id="@layout/exo_player_view"/>
+        app:player_layout_id="@layout/exo_player_view" />
 
     <ProgressBar
         android:id="@+id/buffering"
