--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
                     android:padding="15dp">
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/aniSynTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Title"
@@ -48,7 +48,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/aniSynDesc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Description" />
