--- a/app/src/main/res/layout/activity_anime_page.xml
+++ b/app/src/main/res/layout/activity_anime_page.xml
@@ -75,11 +75,6 @@
             android:layout_height="match_parent"
             android:background="#111111">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:ignore="SpeakableTextPresentCheck">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -193,14 +188,20 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="32dp"
                             android:isIndicator="true"
+                            android:progressBackgroundTint="#000"
                             android:stepSize=".1"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/aniDesc"
                             tools:ignore="SpeakableTextPresentCheck" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/aniEps"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
                 </LinearLayout>
-            </ScrollView>
 
         </FrameLayout>
 
