--- a/app/src/main/res/layout/custom_player_controls.xml
+++ b/app/src/main/res/layout/custom_player_controls.xml
@@ -30,6 +30,8 @@
         android:layout_marginStart="90dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="90dp"
+        android:lineSpacingExtra="8sp"
+        android:maxLines="3"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/white"
