--- a/app/src/main/res/layout/fragment_anime_page_start.xml
+++ b/app/src/main/res/layout/fragment_anime_page_start.xml
@@ -46,7 +46,9 @@
         android:id="@+id/aniCountry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="country"
         android:textSize="16sp"
@@ -56,6 +58,8 @@
         android:id="@+id/aniPop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="popularity"
         android:textSize="16sp"
@@ -65,6 +69,8 @@
         android:id="@+id/aniSeason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="season"
         android:textSize="16sp"
@@ -74,6 +80,8 @@
         android:id="@+id/aniType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="type"
         android:textSize="16sp"
@@ -83,6 +91,8 @@
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="6dp"
         android:text="Genres:"
         android:textSize="16sp"
@@ -92,6 +102,8 @@
         android:id="@+id/aniGenres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="genres"
         android:textSize="16sp"
@@ -101,6 +113,8 @@
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="6dp"
         android:text="Studios:"
         android:textSize="16sp"
@@ -110,6 +124,8 @@
         android:id="@+id/aniStudios"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="studios"
         android:textSize="16sp"
         android:textStyle="bold" />
